# chmurowe-bezpieczenstwo

./: README.md  docker-compose.yaml  docker-compose2.yaml  images.sh  port-forward.sh  pyproject.toml  rm.sh  run.sh  xd.py
backend/: .env  Dockerfile  requirements.txt  server.py
docs/: main.tex  references.bib
frontend/: .env  .env copy  Dockerfile  package-lock.json  package.json
frontend/src/: auth.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/blogs/[name]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: add-post-form.tsx  create-form.tsx  display-posts.tsx  display-session.tsx  fetch-helper.tsx  random-blog.tsx  search-blogs.tsx  sign-in.tsx  sign-out.tsx
frontend/src/context/: blog-context.tsx
keycloak/: realm.json  realm2.json  realmog.json
kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  keycloak-deployment.yaml  mongo-deployment copy.yaml  postgres-deployment.yaml
kubernetes copy/: backend-deployment.yaml  frontend-deployment.yaml  keycloak-deployment.yaml  keycloak-realm-configmap.yaml  mongo-deployment copy.yaml  postgres-deployment.yaml
