[tool.poetry]
name = "chmurowe-bezpieczenstwo"
version = "0.1.0"
description = ""
authors = ["olszewskista <olszewski.sta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
fastapi-keycloak = "^1.0.11"
fastapi-keycloak-middleware = "^1.0.1"
pymongo = "^4.7.3"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
